--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Background Removal
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,31 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Background Removal</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-grid>
+  <ion-row>
+    <ion-col size="4" offset="4">
+      <ion-item>
+        <ion-label>Upload File</ion-label>
+       <input (change)="fileEvent($event)" type="file" name="image" id="">
+      </ion-item>
+      <ion-button (click)="upload()" expand="block">
+       Upload
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    
+    <ion-col size="6" *ngIf="imageUrl">
+      <ion-img [src]="imageUrl"></ion-img>
+      <ion-button (click)="download()" expand="block">
+        Download Image
+      </ion-button>
+    </ion-col>
+   
+  </ion-row>
+</ion-grid>
 </ion-content>
